--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/salsify/ember-botanist.git"
+  },
   "scripts": {
     "build": "ember build",
     "start": "ember server",
